Fix: Gap issue with picture in hero page and minor content change

--- a/assets/css/meyawo.css
+++ b/assets/css/meyawo.css
@@ -12470,7 +12470,7 @@ pre .code {
 
 .header {
   position: relative;
-  height: 100vh;
+  height: 70vh;
   min-height: 600px;
   display: -webkit-box;
   display: -ms-flexbox;
